--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>&lt;google-youtube-upload&gt; Demo</title>
-    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="demo.elements.html">
     <style>
       body {
