Move comment to prevent hydrolysis from latching on.

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -46,7 +46,8 @@ Automatic upload on video file select, with a custom title, and 'unlisted' priva
 </dom-module>
 <script>
   (function() {
-    var STATUS_POLLING_ITERVAL_MILLIS = 60 * 1000; // One minute.
+    // One minute.
+    var STATUS_POLLING_ITERVAL_MILLIS = 60 * 1000;
 
     Polymer( {
 
