@demo fix: googlewebcomponents#15

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -19,6 +19,7 @@ Automatic upload on video file select, with a custom title, and 'unlisted' priva
       client-id="...">
     </google-youtube-upload>
 
+@demo
 -->
 <dom-module id="google-youtube-upload">
   <link rel="import" type="css" href="google-youtube-upload.css">
