--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,13 @@
     <link rel="import" href="../../iron-pages/iron-pages.html">
     <link rel="import" href="../../google-youtube/google-youtube.html">
     <link rel="import" href="../google-youtube-upload.html">
+    <style>
+      google-youtube-upload {
+        width: 400px;
+        height: 300px;
+        border: 2px solid silver;
+      }
+    </style>
   </head>
 
   <body>
