Change mimeType default value to empty
If mimeType value is empty, the browser will use a platform-specific (best suited) default.

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -430,7 +430,7 @@ for capturing only windows or applications (all the windows of an application), 
        */
       mimeType: {
         type: String,
-        value: 'video/webm;codecs=vp9,vp8'
+        value: ''
       }
     },
 
