Add missing double quotes

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -37,12 +37,12 @@ by toggling `chrome://flags#enable-usermedia-screen-capturing` flag):
       client-id='...'>
     </google-youtube-upload>
 
-Capture screen on Firefox (you can also use `{mediaSource: "window"}` and `{mediaSource: "application"}`
+Capture screen on Firefox (you can also use `{"mediaSource": "window"}` and `{"mediaSource": "application"}`
 for capturing only windows or applications (all the windows of an application), not the whole screen):
 
     <google-youtube-upload
       audio='false'
-      video='{mediaSource: "screen"}'
+      video='{"mediaSource": "screen"}'
       client-id='...'>
     </google-youtube-upload>
 
