Set Change mimeType default value

--- a/google-youtube-upload.html
+++ b/google-youtube-upload.html
@@ -445,7 +445,7 @@ NOTE: Chrome doesn't support combining screen capture video tracks with audio tr
        */
       mimeType: {
         type: String,
-        value: ''
+        value: 'video/webm;codecs=vp9,vp8'
       }
     },
 
